# chip8-polyglot

./: README.md
implementations/chip8-go/: chip8.go  go.mod
implementations/chip8-go/internal/chip8/: engine.go
implementations/chip8-python/: .gitignore  Justfile  README.md  devenv.nix  pyproject.toml
implementations/chip8-python/src/chip8/: audio.py  cartridge.py  display.py  engine.py  font.py  keypad.py  memory.py  mode.py  opcodes.py  quirks.py  registers.py  signal.py  stack.py  timers.py  types.py
implementations/chip8-python/src/chip8/gui/: keyboard.py  main.py  screen.py  sound.py
implementations/chip8-python/tests/: test_engine.py  test_opcode.py
