[tool.poetry]
name = "chip8"
version = "0.1.0"
description = ""
authors = ["Denis BOURGE <Srynetix@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"
typer = "^0.12.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.4"
ipdb = "^0.13.13"
pudb = "^2024.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
